--- a/HTML/hw_htmlwebsite.html
+++ b/HTML/hw_htmlwebsite.html
@@ -1,28 +1,30 @@
 <head>
     <meta charset="UTF-8">
-    <title> YUMMY RECIPES </title>
+  <font face="Comic sans MS" size="12"><title> YUMMY RECIPES </title>
 </head>
-<body>
-<center><h1>Yummy Oatmeal Cookies</h1></center>
-<p>Oatmeal cookies are a prize staple in many households.
+<body style="background-color:yellow;">
+<center><h1 style="color:blue;"><u>Yummy Oatmeal Cookies!</u></></center>
+<p  style="font-family:Ariel; color:saddlebrown; font-size: 20px;"><b>Oatmeal cookies are a prize staple in many households.
 Along with chocholate chip cookies it can be eaten during anytime of the year.
-Keep reading to find out how to make these baked oats of goodness!
+    Keep reading to find out how to make these baked oats of goodness!</b>
 </p>
 <center><img src="images\oatmeal cookies.jpg" width="300"></center>
-<h3>Things You'll Need</h3>
-<ul>
+<h3 style="color:green;">Things You'll Need</h3>
+<ul  style="font-family:Comic 'Century Schoolbook'; color:darkred; font-size: 20px;">
 <li>3 cups rolled oats</li>
 <li>1 teaspoon baking</li>
 <li>2 cups of flour</li>
-<li>1 teaspoon vanilla extract</li>li
+<li>1 teaspoon vanilla extract</li>
 <li>2 eggs</li>
 <li>1 softened butter</li>
 <li>1 cup of packed brown sugar</li>
  <li> 1 cup of white sugar</li>
 </ul>
-<h3>Instructions</h3>
+
+<h3 style="color:red;">Instructions</h3>
 <p>
-   <ol type = "1">
+   <ol style="font-family:'Century Gothic'
+   ; color:purple; font-size: 20px;"type = "1">
          <li>Whisk butter, both brown sugar and white sugar, egg, and vanilla together.</li>
          <li>Stir in oats and optional ingredients if you are using them</li>
          <li>Preheat oven to 350 degrees</li>
@@ -33,6 +35,13 @@ Keep reading to find out how to make these baked oats of goodness!
       </ol>
 </p>
 <center><img src="oatmeal_cookieb.jpg" width="300"></center>
+<table>
+ <tr>
+     <td>Have A GREAT TIME EATING THESE!</td>
+
+ </tr>
+</table>
+
 
 </body>
 </html>
