HW website HTML

--- a/HTML/hw_htmlwebsite.html
+++ b/HTML/hw_htmlwebsite.html
@@ -35,12 +35,22 @@ Along with chocholate chip cookies it can be eaten during anytime of the year.
       </ol>
 </p>
 <center><img src="oatmeal_cookieb.jpg" width="300"></center>
-<table>
- <tr>
-     <td>Have A GREAT TIME EATING THESE!</td>
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+<table border = "1">
 
- </tr>
-</table>
+    <tr>
+            <td>Row 1, Column 1</td>
+            <td>Row 1, Column 2</td>
+         </tr>
+
+         <tr>
+            <td>Row 2, Column 1</td>
+            <td>Row 2, Column 2</td>
+         </tr>
+      </table>
 
 
 </body>
